--- a/config.json
+++ b/config.json
@@ -15,4 +15,9 @@
     "roleCrLimits": 3,
     "time": 30
   }
+  "YOUTUBE_API_KEY": "AIzaSyApFg4t8RUKVHjeXl3VUFJMVT-V1WuaiHM",
+  "SOUNDCLOUD_CLIENT_ID": "",
+  "MAX_PLAYLIST_SIZE": 50,
+  "PREFIX": "@",
+  "PRUNING": false
 }
