--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ms": "^2.1.2",
     "node-cmd": "^3.0.0",
     "pretty-ms": "^7.0.0",
+    "lyrics-finder": "^21.0.5",
     "request": "^2.88.2",
     "simple-youtube-api": "^5.2.1",
     "table": "^5.4.6",
