--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "guild": "^1.2.2",
     "hastebin-gen": "^2.0.5",
     "hh-mm-ss": "^1.2.0",
+    "@discordjs/opus": "^0.3.2",
     "isgd": "^1.1.3",
     "jimp": "^0.14.0",
     "moment": "^2.27.0",
     "ms": "^2.1.2",
+    "ffmpeg-static": "^4.2.3",
+    "string-progressbar": "^1.0.1",
+    "soundcloud-downloader": "^0.1.2",
     "node-cmd": "^3.0.0",
     "pretty-ms": "^7.0.0",
     "lyrics-finder": "^21.0.5",
@@ -25,5 +29,6 @@
     "util": "^0.12.3",
     "youtube-info": "^1.3.2",
     "ytdl-core": "^3.1.2"
+    "ytdl-core-discord": "^1.2.1"
   }
 }
