--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "table": "^5.4.6",
     "util": "^0.12.3",
     "youtube-info": "^1.3.2",
-    "ytdl-core": "^3.1.2"
+    "ytdl-core": "^3.1.2",
     "ytdl-core-discord": "^1.2.1"
   }
 }
