--- a/package.json
+++ b/package.json
@@ -7,17 +7,22 @@
     "discord.js": "^11.3.2",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "sqlite": "^2.9.2",    
     "get-youtube-id": "^1.0.1",
+    "moment-duration-format": "^2.2.2",
     "gif-search": "^2.1.0",
     "guild": "^1.2.2",
     "hastebin-gen": "^2.0.5",
     "hh-mm-ss": "^1.2.0",
     "@discordjs/opus": "^0.3.2",
+    "ytdl-core": "^0.20.4",
     "isgd": "^1.1.3",
     "jimp": "^0.14.0",
     "moment": "^2.27.0",
     "ms": "^2.1.2",
-    "ffmpeg-static": "^4.2.3",
+    "ffmpeg-binaries": "^3.2.2-3",
+    "enmap-sqlite": "^2.0.1",
+    "enmap": "^2.5.2",
     "string-progressbar": "^1.0.1",
     "soundcloud-downloader": "^0.1.2",
     "node-cmd": "^3.0.0",
@@ -30,5 +35,12 @@
     "youtube-info": "^1.3.2",
     "ytdl-core": "^3.1.2",
     "ytdl-core-discord": "^1.2.1"
+  }
+  "devDependencies": {
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0"
   }
 }
