--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rebatbot",
-  "version": "1.0.0"
+  "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
     "array-sort": "^1.0.0",
