--- a/package.json
+++ b/package.json
@@ -37,5 +37,7 @@
     "youtube-info": "^1.3.2",
     "ytdl-core": "^3.1.2",
     "ytdl-core-discord": "^1.2.1"
-  }
+  },
+  "engines": {
+    "node": "12.x"
 }
