--- a/package.json
+++ b/package.json
@@ -8,36 +8,32 @@
     "dateformat": "^3.0.3",
     "discord.js": "^11.3.2",
     "express": "^4.17.1",
-    "fs": "0.0.1-security",
-    "sqlite": "^2.9.2",    
     "get-youtube-id": "^1.0.1",
-    "moment-duration-format": "^2.2.2",
     "gif-search": "^2.1.0",
     "guild": "^1.2.2",
     "hastebin-gen": "^2.0.5",
     "hh-mm-ss": "^1.2.0",
-    "@discordjs/opus": "^0.3.2",
-    "ytdl-core": "^0.20.4",
-    "isgd": "^1.1.3",
     "jimp": "^0.14.0",
     "moment": "^2.27.0",
     "ms": "^2.1.2",
-    "ffmpeg-binaries": "^3.2.2-3",
-    "enmap-sqlite": "^2.0.1",
-    "enmap": "^2.5.2",
-    "string-progressbar": "^1.0.1",
-    "soundcloud-downloader": "^0.1.2",
     "node-cmd": "^3.0.0",
+    "node-emoji": "^1.10.0",
     "pretty-ms": "^7.0.0",
-    "lyrics-finder": "^21.0.5",
     "request": "^2.88.2",
     "simple-youtube-api": "^5.2.1",
     "table": "^5.4.6",
     "util": "^0.12.3",
     "youtube-info": "^1.3.2",
     "ytdl-core": "^3.1.2",
-    "ytdl-core-discord": "^1.2.1"
-  },
+    "enmap": "^2.5.2",
+    "enmap-sqlite": "^2.0.1",
+    "ffmpeg-binaries": "^3.2.2-3",
+    "moment-duration-format": "^2.2.2",
+    "node-opus": "^0.3.0",
+    "simple-youtube-api": "^5.0.2",
+    "sqlite": "^2.9.2",
+    "ytdl-core": "^0.20.4"
+ },
   "engines": {
     "node": "12.x"
 }
