--- a/package.json
+++ b/package.json
@@ -34,6 +34,21 @@
     "sqlite": "^2.9.2",
     "ytdl-core": "^0.20.4"
  },
+    "repository": {
+    "type": "git",
+    "url": "git+https://github.com/YoussefElshemi/Music-Bot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/YoussefElshemi/Music-Bot/issues"
+  },
+  "homepage": "https://github.com/YoussefElshemi/Music-Bot#readme",
+  "devDependencies": {
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0"
+  },
   "engines": {
     "node": "12.x"
 }
