--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "canvas": "^2.6.1",
     "dateformat": "^3.0.3",
     "discord.js": "^11.3.2",
+    "discord.js-musicbot-addon": "^2",
     "express": "^4.17.1",
     "get-youtube-id": "^1.0.1",
     "gif-search": "^2.1.0",
