--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "util": "^0.12.3",
     "youtube-info": "^1.3.2",
     "ytdl-core": "^3.1.2"
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
