--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "guild": "^1.2.2",
     "hastebin-gen": "^2.0.5",
     "hh-mm-ss": "^1.2.0",
+    "isgd": "^1.1.3",
     "jimp": "^0.14.0",
     "moment": "^2.27.0",
     "ms": "^2.1.2",
     "node-cmd": "^3.0.0",
-    "node-emoji": "^1.10.0",
     "pretty-ms": "^7.0.0",
     "request": "^2.88.2",
     "simple-youtube-api": "^5.2.1",
@@ -25,8 +25,5 @@
     "util": "^0.12.3",
     "youtube-info": "^1.3.2",
     "ytdl-core": "^3.1.2"
-  },
-  "engines": {
-    "node": "12.x"
   }
 }
