--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "util": "^0.12.3",
     "youtube-info": "^1.3.2",
     "ytdl-core": "^3.1.2"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
