--- a/package.json
+++ b/package.json
@@ -24,6 +24,20 @@
     "table": "^5.4.6",
     "util": "^0.12.3",
     "youtube-info": "^1.3.2",
+    "chalk": "^2.0.1",
+    "cli-table2": "^0.2.0",
+    "ffmpeg-binaries": "^3.2.2-3",
+    "get-youtube-id": "^1.0.0",
+    "moment": "^2.18.1",
+    "node-json-db": "^0.7.3",
+    "node-opus": "^0.2.6",
+    "snekfetch": "^3.2.4",
+    "soundcloud": "^3.1.2",
+    "winston": "^2.3.1",
+    "xo": "^0.18.2",
+    "youtube-info": "^1.1.1",
+    "youtube-playlist-info": "^0.1.0",
+    "youtube-video-info": "0.0.1",
     "ytdl-core": "^3.1.2"
   },
   "scripts": {
